<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="354dp"
        android:layout_height="95dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="45dp"
        android:gravity="center_horizontal"
        android:text="@string/tvTitle"
        android:textColor="#1155FF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="78dp"
        android:ems="10"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:hint="@string/hint"
        android:inputType="number"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/rgTools"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <RadioGroup
        android:id="@+id/rgTools"
        android:layout_width="364dp"
        android:layout_height="100dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="108dp"
        app:layout_constraintBottom_toTopOf="@+id/btCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDays">

        <RadioButton
            android:id="@+id/rbWasher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbWasher"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbTiller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbTiller"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:backgroundTint="#1155FF"
        android:gravity="center_horizontal"
        android:text="@string/btCalculate"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tvResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgTools" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="13dp"
        android:gravity="center"
        android:textColor="#1155FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCalculate" />
</androidx.constraintlayout.widget.ConstraintLayout>